--- a/404.html
+++ b/404.html
@@ -191,15 +191,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a></header>
+<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a> <a href="#top">top</a> </header>
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-org8a1c1a7" class="outline-2">
-<h2 id="org8a1c1a7">404 - page not found</h2>
-<div class="outline-text-2" id="text-org8a1c1a7">
+<div id="outline-container-orgff54d1b" class="outline-2">
+<h2 id="orgff54d1b">404 - page not found</h2>
+<div class="outline-text-2" id="text-orgff54d1b">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
