--- a/i-ching.html
+++ b/i-ching.html
@@ -191,7 +191,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a></header>
+<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a> <a href="#top">top</a> </header>
 </head>
 <body>
 <div id="content" class="content">
@@ -200,17 +200,17 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org594ef3e">I Ching</a></li>
-<li><a href="#org348435b">Hexagrams</a></li>
-<li><a href="#orgb04ea2d">Hexagram selection</a></li>
-<li><a href="#org220ff81">Yarrow stalks algorithm</a>
+<li><a href="#orgf19e010">I Ching</a></li>
+<li><a href="#org2d8fa2d">Hexagrams</a></li>
+<li><a href="#org9c781f8">Hexagram selection</a></li>
+<li><a href="#org6fb7c8c">Yarrow stalks algorithm</a>
 <ul>
-<li><a href="#org9695b0c">Process</a></li>
-<li><a href="#org9ad7238">To generate a hexagram:</a></li>
-<li><a href="#orge9bdc69">Implementation Notes</a></li>
+<li><a href="#org535abbf">Process</a></li>
+<li><a href="#orgad50fc8">To generate a hexagram:</a></li>
+<li><a href="#orgc55ded8">Implementation Notes</a></li>
 </ul>
 </li>
-<li><a href="#orga9a1bb3">Meanings</a></li>
+<li><a href="#orgb7b3115">Meanings</a></li>
 </ul>
 </div>
 </div>
@@ -220,9 +220,9 @@
 </script>
 
 
-<div id="outline-container-org594ef3e" class="outline-2">
-<h2 id="org594ef3e">I Ching</h2>
-<div class="outline-text-2" id="text-org594ef3e">
+<div id="outline-container-orgf19e010" class="outline-2">
+<h2 id="orgf19e010">I Ching</h2>
+<div class="outline-text-2" id="text-orgf19e010">
 <p>
 The I Ching is a divination method associated with a book of symbols. This is the <code>Book of Changes</code>. You could think about it as randomly selected blobs of advice from a big book of advice. 
 </p>
@@ -233,9 +233,9 @@ Let's make an I Ching simulation step-by-step.
 </div>
 </div>
 
-<div id="outline-container-org348435b" class="outline-2">
-<h2 id="org348435b">Hexagrams</h2>
-<div class="outline-text-2" id="text-org348435b">
+<div id="outline-container-org2d8fa2d" class="outline-2">
+<h2 id="org2d8fa2d">Hexagrams</h2>
+<div class="outline-text-2" id="text-org2d8fa2d">
 <p>
 Each symbol is a hexagram. A hexagram is a binary array of 6 digits. (Therefore 2<sup>6</sup>=64 different hexagrams). Each is represented vertically with horizontal lines ether complete (yang) or broken (yin). 
 </p>
@@ -250,26 +250,26 @@ These are the first 6 hexagrams of the <a href="https://en.wikipedia.org/wiki/Ki
 </div>
 </div>
 
-<div id="outline-container-orgb04ea2d" class="outline-2">
-<h2 id="orgb04ea2d">Hexagram selection</h2>
-<div class="outline-text-2" id="text-orgb04ea2d">
+<div id="outline-container-org9c781f8" class="outline-2">
+<h2 id="org9c781f8">Hexagram selection</h2>
+<div class="outline-text-2" id="text-org9c781f8">
 <p>
 To choose a hexagram some randomization method is needed. It is common to use ether coins or sticks (traditionally yarrow stalks). These two methods yield different probabilities. Here we will use the yarrow stalks method, which is older and more elaborate.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org220ff81" class="outline-2">
-<h2 id="org220ff81">Yarrow stalks algorithm</h2>
-<div class="outline-text-2" id="text-org220ff81">
+<div id="outline-container-org6fb7c8c" class="outline-2">
+<h2 id="org6fb7c8c">Yarrow stalks algorithm</h2>
+<div class="outline-text-2" id="text-org6fb7c8c">
 <p>
 There is quite a lot of ceremony (activity which does not effect the result) in this method. It would be simplest to just sample from the probabilities and generate the hexagram like that. Instead we are going to simulate it step-by-step, just for fun.
 </p>
 </div>
 
-<div id="outline-container-org9695b0c" class="outline-3">
-<h3 id="org9695b0c">Process</h3>
-<div class="outline-text-3" id="text-org9695b0c">
+<div id="outline-container-org535abbf" class="outline-3">
+<h3 id="org535abbf">Process</h3>
+<div class="outline-text-3" id="text-org535abbf">
 <p>
 We generate two hexagrams in parallel. We go line by line from the bottom to the top. Since we generate two at the same time, each "line" can have four different states: 
 </p>
@@ -290,9 +290,9 @@ There are multiple versions of this method. I've chosen what appeared to be the 
 </div>
 </div>
 
-<div id="outline-container-org9ad7238" class="outline-3">
-<h3 id="org9ad7238">To generate a hexagram:</h3>
-<div class="outline-text-3" id="text-org9ad7238">
+<div id="outline-container-orgad50fc8" class="outline-3">
+<h3 id="orgad50fc8">To generate a hexagram:</h3>
+<div class="outline-text-3" id="text-orgad50fc8">
 <p>
 We are going to make various piles of stalks. I will refer to these with single character names (<code>l</code>, <code>r</code>, <code>d</code>, etc). We also want to recall intermediary results that go into the final result. These will be referred to as <code>result-a</code>, <code>result-b</code>, <code>result-c</code>. For each hexagram we need to generate 6 lines. Each line is attained from the sum of three results.
 </p>
@@ -317,9 +317,9 @@ We are going to make various piles of stalks. I will refer to these with single 
 </div>
 </div>
 
-<div id="outline-container-orge9bdc69" class="outline-3">
-<h3 id="orge9bdc69">Implementation Notes</h3>
-<div class="outline-text-3" id="text-orge9bdc69">
+<div id="outline-container-orgc55ded8" class="outline-3">
+<h3 id="orgc55ded8">Implementation Notes</h3>
+<div class="outline-text-3" id="text-orgc55ded8">
 <p>
 The algorithm explained above is implemented here in ClojureScript using Scittle to run it in the browser. The code is editable do feel free to tweak it and play around with it. Pseudo-randomness is added at the approx half splitting point in step 3. To make this somewhat realistic we sample from a normal distribution using a Box-Muller transform, and then round to the nearest integer to create an offset to the split.
 </p>
@@ -460,9 +460,9 @@ The sole purpose of the code below is to represent a common version of the yarro
 </div>
 
 
-<div id="outline-container-orga9a1bb3" class="outline-2">
-<h2 id="orga9a1bb3">Meanings</h2>
-<div class="outline-text-2" id="text-orga9a1bb3">
+<div id="outline-container-orgb7b3115" class="outline-2">
+<h2 id="orgb7b3115">Meanings</h2>
+<div class="outline-text-2" id="text-orgb7b3115">
 <p>
 The general idea seems to be the transition from the first to the second hexagram. (Book of Changes, remember) You can look up the symbols and contemplate their interpretations here:
 </p>
