--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a></header>
+<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a> <a href="#top">top</a> </header>
 </head>
 <body>
 <div id="content" class="content">
@@ -201,22 +201,41 @@ hi i'm luke - this is my blog
 </p>
 
 <ul class="org-ul">
-<li><a href="./convolution.html">convolution</a></li>
-<li><a href="dft.html">discrete fourier transform</a></li>
-<li><a href="ring-modulation.html">ring modulation and frequency shifting</a></li>
-<li><a href="aes-encryption.html">aes encryption</a></li>
-<li><a href="how-this-blog-works.html">how this blog works</a></li>
-<li><a href="https://larzeitlin.github.io/simple-flashcards">simple flashcards</a></li>
-<li><a href="scittle-hilbert-curve.html">scittle hilbert curve</a></li>
-<li><a href="i-ching.html">i ching</a></li>
-<li><a href="http://www.lzeitlin.xyz/octohabit/">habit tracker</a></li>
-<li><a href="monads-python.html">monads in python</a></li>
-<li><a href="http://www.lzeitlin.xyz/laranjas/">particle system</a></li>
-<li><a href="cljs-webgl1.html">webgl in cljs part 1</a></li>
-<li><a href="wfc.html">wave function collapse</a></li>
-<li><a href="http://www.lzeitlin.xyz/vortex-doodle/">scittle and three.js</a></li>
-<li><a href="assembly.html">x86-64 assembly</a></li>
+<li><a href="./convolution.html">convolution</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2017-07-23 Sun]</span></span></li>
+<li><a href="dft.html">discrete fourier transform</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2017-07-23 Sun]</span></span></li>
+<li><a href="ring-modulation.html">ring modulation and frequency shifting</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2017-11-08 Wed]</span></span></li>
+<li><a href="assembly.html">x86-64 assembly</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2019-05-12 Sun]</span></span></li>
+<li><a href="https://larzeitlin.github.io/simple-flashcards">simple flashcards</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2020-10-22 Thu]</span></span></li>
+<li><a href="aes-encryption.html">aes encryption</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2020-12-30 Wed]</span></span></li>
+<li><a href="how-this-blog-works.html">how this blog works</a> 
+<span class="timestamp-wrapper"><span class="timestamp">[2023-02-06 Mon]</span></span></li>
+<li><a href="scittle-hilbert-curve.html">scittle hilbert curve</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2023-02-22 Wed]</span></span></li>
+<li><a href="i-ching.html">i ching</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2023-05-25 Thu]</span></span></li>
+<li><a href="http://www.lzeitlin.xyz/octohabit/">habit tracker</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2023-08-02 Wed]</span></span></li>
+<li><a href="monads-python.html">monads in python</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2023-11-12 Sun]</span></span></li>
+<li><a href="http://www.lzeitlin.xyz/laranjas/">particle system</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2023-11-19 Sun]</span></span></li>
+<li><a href="cljs-webgl1.html">webgl in cljs part 1</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2023-11-21 Tue]</span></span></li>
+<li><a href="wfc.html">wave function collapse</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2024-01-15 Mon]</span></span></li>
+<li><a href="http://www.lzeitlin.xyz/vortex-doodle/">scittle and three.js</a>
+<span class="timestamp-wrapper"><span class="timestamp">[2024-02-04 Sun]</span></span></li>
 </ul>
+
+<p>
+<a href="mailto:luke@lzeitlin.xyz">send me an email</a>
+</p>
 </div>
 </body>
 </html>
