--- a/convolution.html
+++ b/convolution.html
@@ -191,7 +191,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a></header>
+<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a> <a href="#top">top</a> </header>
 </head>
 <body>
 <div id="content" class="content">
@@ -200,12 +200,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc793a07">Convolution</a>
+<li><a href="#orgf3a945d">Convolution</a>
 <ul>
-<li><a href="#org3667e8c">What can convolution do for us?</a></li>
-<li><a href="#orgbe5b94b">Do LTI systems exist?</a></li>
-<li><a href="#org4b0381d">OK, lets convolve!</a></li>
-<li><a href="#org868a8dc">Why do we do the flip?</a></li>
+<li><a href="#org54df687">What can convolution do for us?</a></li>
+<li><a href="#org9c2bcef">Do LTI systems exist?</a></li>
+<li><a href="#org1921b69">OK, lets convolve!</a></li>
+<li><a href="#org98bf29a">Why do we do the flip?</a></li>
 <li><a href="#impulse-responses">Impulse Responses</a></li>
 </ul>
 </li>
@@ -213,9 +213,9 @@
 </div>
 </div>
 
-<div id="outline-container-orgc793a07" class="outline-2">
-<h2 id="orgc793a07">Convolution</h2>
-<div class="outline-text-2" id="text-orgc793a07">
+<div id="outline-container-orgf3a945d" class="outline-2">
+<h2 id="orgf3a945d">Convolution</h2>
+<div class="outline-text-2" id="text-orgf3a945d">
 <p>
 Convolution is, to me at least, a really inspirational subject. Why?
 Because it can initially seem like DSP magic, but it's really not hard
@@ -243,9 +243,9 @@ bother.
 </p>
 </div>
 
-<div id="outline-container-org3667e8c" class="outline-3">
-<h3 id="org3667e8c">What can convolution do for us?</h3>
-<div class="outline-text-3" id="text-org3667e8c">
+<div id="outline-container-org54df687" class="outline-3">
+<h3 id="org54df687">What can convolution do for us?</h3>
+<div class="outline-text-3" id="text-org54df687">
 <p>
 Quite a lot actually. We can use convolution to model any <b>linear time
 invariant</b> (LTI) system. Let's explore that term:
@@ -289,13 +289,13 @@ Again, this is shown by A producing the same result as B.
 </p>
 
 
-<div id="org64a574d" class="figure">
+<div id="orgb719477" class="figure">
 <p><img src="images/linear1.jpg" alt="linear1.jpg" />
 </p>
 </div>
 
 
-<div id="org984437f" class="figure">
+<div id="org2f5feda" class="figure">
 <p><img src="images/3.1.png" alt="3.1.png" />
 </p>
 </div>
@@ -347,9 +347,9 @@ do so.
 </div>
 </div>
 
-<div id="outline-container-orgbe5b94b" class="outline-3">
-<h3 id="orgbe5b94b">Do LTI systems exist?</h3>
-<div class="outline-text-3" id="text-orgbe5b94b">
+<div id="outline-container-org9c2bcef" class="outline-3">
+<h3 id="org9c2bcef">Do LTI systems exist?</h3>
+<div class="outline-text-3" id="text-org9c2bcef">
 <p>
 <i>"What what? You just told us that a whole heap of stuff is LTI!"</i>
 </p>
@@ -373,9 +373,9 @@ stealing the room's soul. Magic, right?
 </div>
 </div>
 
-<div id="outline-container-org4b0381d" class="outline-3">
-<h3 id="org4b0381d">OK, lets convolve!</h3>
-<div class="outline-text-3" id="text-org4b0381d">
+<div id="outline-container-org1921b69" class="outline-3">
+<h3 id="org1921b69">OK, lets convolve!</h3>
+<div class="outline-text-3" id="text-org1921b69">
 <p>
 Before going any further, I should point out that the mathematical
 operator for convolution is often drawn as an asterisk: * . This is a
@@ -390,7 +390,7 @@ The definition of discrete-time convolution is as follows:
 </p>
 
 
-<div id="orga424972" class="figure">
+<div id="orgf4535e3" class="figure">
 <p><img src="images/3.2.jpeg" alt="3.2.jpeg" />
 </p>
 </div>
@@ -462,7 +462,7 @@ flipped around 0 on the y axis)</li>
 </ul>
 
 
-<div id="org7e0beab" class="figure">
+<div id="org343ff10" class="figure">
 <p><img src="images/3.3.gif" alt="3.3.gif" />
 </p>
 </div>
@@ -516,9 +516,9 @@ together.</b>
 </div>
 </div>
 
-<div id="outline-container-org868a8dc" class="outline-3">
-<h3 id="org868a8dc">Why do we do the flip?</h3>
-<div class="outline-text-3" id="text-org868a8dc">
+<div id="outline-container-org98bf29a" class="outline-3">
+<h3 id="org98bf29a">Why do we do the flip?</h3>
+<div class="outline-text-3" id="text-org98bf29a">
 <p>
 We need to flip g because we want the <b>beginning of g</b> to meet the
 <b>beginning of f</b> first, and the <b>end of g</b> to meet the <b>end of f</b> last,
@@ -552,7 +552,7 @@ points apart from one point where it's value is 1. For example: [0, 1, 0,
 </p>
 
 
-<div id="org131896f" class="figure">
+<div id="org0756a30" class="figure">
 <p><img src="images/3.4.jpeg" alt="3.4.jpeg" />
 </p>
 </div>
