--- a/dft.html
+++ b/dft.html
@@ -191,7 +191,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a></header>
+<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a> <a href="#top">top</a> </header>
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
         displayAlign: "center",
@@ -221,26 +221,26 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org609a271">Discrete Fourier Transform</a>
+<li><a href="#orgaa811bb">Discrete Fourier Transform</a>
 <ul>
-<li><a href="#org9091665">A Roundabout Introduction</a>
+<li><a href="#orgd5fd191">A Roundabout Introduction</a>
 <ul>
-<li><a href="#orgd6c3a74">Sinusoids, circles and epicycles</a></li>
-<li><a href="#org1762d48">Amplitude and Phase</a></li>
+<li><a href="#orgc072c77">Sinusoids, circles and epicycles</a></li>
+<li><a href="#org0417cef">Amplitude and Phase</a></li>
 </ul>
 </li>
-<li><a href="#orgcec865b">Imaginary and Complex Numbers</a></li>
-<li><a href="#org85d1687">Euler's Number</a>
+<li><a href="#org2a8bb22">Imaginary and Complex Numbers</a></li>
+<li><a href="#orgaf4f506">Euler's Number</a>
 <ul>
-<li><a href="#org6dd3232">Growth</a></li>
+<li><a href="#org3a31bfd">Growth</a></li>
 <li><a href="#imaginary-growth-is-anticlockwise-rotation">Imaginary Growth is Anticlockwise Rotation</a></li>
 </ul>
 </li>
-<li><a href="#orge6155cc">Complex sinusoid</a></li>
-<li><a href="#org8df4c83">The Discrete Fourier Transform</a>
+<li><a href="#org887ae43">Complex sinusoid</a></li>
+<li><a href="#orgd2ae018">The Discrete Fourier Transform</a>
 <ul>
-<li><a href="#org93f6e69">Why are we multiplying our input signal by sinusoids?</a></li>
-<li><a href="#org8d9c5fe">Examples</a></li>
+<li><a href="#org0ee63d3">Why are we multiplying our input signal by sinusoids?</a></li>
+<li><a href="#org4f0d4dc">Examples</a></li>
 </ul>
 </li>
 <li><a href="#some-properties-of-the-dft">Some Properties of the DFT</a></li>
@@ -251,9 +251,9 @@
 </div>
 </div>
 
-<div id="outline-container-org609a271" class="outline-2">
-<h2 id="org609a271">Discrete Fourier Transform</h2>
-<div class="outline-text-2" id="text-org609a271">
+<div id="outline-container-orgaa811bb" class="outline-2">
+<h2 id="orgaa811bb">Discrete Fourier Transform</h2>
+<div class="outline-text-2" id="text-orgaa811bb">
 <p>
 This is just my understanding / intuitive explanation of what this algorithm means.
 </p>
@@ -286,9 +286,9 @@ and phase?"</i></li>
 </ul>
 </div>
 
-<div id="outline-container-org9091665" class="outline-3">
-<h3 id="org9091665">A Roundabout Introduction</h3>
-<div class="outline-text-3" id="text-org9091665">
+<div id="outline-container-orgd5fd191" class="outline-3">
+<h3 id="orgd5fd191">A Roundabout Introduction</h3>
+<div class="outline-text-3" id="text-orgd5fd191">
 <p>
 <a href="https://en.wikipedia.org/wiki/Joseph_Fourier">Joseph Fourier</a>
 was a French mathematician who was doing his thing at the end of the 18th to
@@ -302,9 +302,9 @@ sinusoids.
 </p>
 </div>
 
-<div id="outline-container-orgd6c3a74" class="outline-4">
-<h4 id="orgd6c3a74">Sinusoids, circles and epicycles</h4>
-<div class="outline-text-4" id="text-orgd6c3a74">
+<div id="outline-container-orgc072c77" class="outline-4">
+<h4 id="orgc072c77">Sinusoids, circles and epicycles</h4>
+<div class="outline-text-4" id="text-orgc072c77">
 <p>
 Let's start by thinking of a sinusoid as an aspect of circular movement
 in relation to time. As we probably all learned in school at some stage,
@@ -315,7 +315,7 @@ in the unit circle, like this:
 </p>
 
 
-<div id="org1ab1d22" class="figure">
+<div id="orgf0ca357" class="figure">
 <p><img src="images/4.1.gif" alt="4.1.gif" align="center" />
 </p>
 </div>
@@ -326,7 +326,7 @@ elaborate periodic signals, like so:
 </p>
 
 
-<div id="org576521e" class="figure">
+<div id="org506753b" class="figure">
 <p><img src="images/4.2.gif" alt="4.2.gif" align="center" />
 </p>
 </div>
@@ -372,7 +372,7 @@ a fixed deferent.
 </blockquote>
 
 
-<div id="org6927458" class="figure">
+<div id="orgf6f5868" class="figure">
 <p><img src="images/4.3.jpg" alt="4.3.jpg" align="center" />
 </p>
 </div>
@@ -395,9 +395,9 @@ here, and the end result is intuitive.
 </div>
 </div>
 
-<div id="outline-container-org1762d48" class="outline-4">
-<h4 id="org1762d48">Amplitude and Phase</h4>
-<div class="outline-text-4" id="text-org1762d48">
+<div id="outline-container-org0417cef" class="outline-4">
+<h4 id="org0417cef">Amplitude and Phase</h4>
+<div class="outline-text-4" id="text-org0417cef">
 <p>
 What we do need is a method to find out <b>which sinusoids</b> are in a given
 signal. Just the frequency of those sinusoids isn't enough information.
@@ -412,7 +412,7 @@ Here's a sinusoid with its amplitude being changed:
 
 
 
-<div id="orgc77bc61" class="figure">
+<div id="orgfd8fd23" class="figure">
 <p><img src="images/4.5.gif" alt="4.5.gif" align="center" />
 </p>
 </div>
@@ -422,7 +422,7 @@ And here's one with its phase value being changed:
 </p>
 
 
-<div id="orgd3dd369" class="figure">
+<div id="org40abd10" class="figure">
 <p><img src="images/4.4.gif" alt="4.4.gif" align="center" />
 </p>
 </div>
@@ -453,9 +453,9 @@ of the article
 </div>
 </div>
 
-<div id="outline-container-orgcec865b" class="outline-3">
-<h3 id="orgcec865b">Imaginary and Complex Numbers</h3>
-<div class="outline-text-3" id="text-orgcec865b">
+<div id="outline-container-org2a8bb22" class="outline-3">
+<h3 id="org2a8bb22">Imaginary and Complex Numbers</h3>
+<div class="outline-text-3" id="text-org2a8bb22">
 <p>
 \[i = \sqrt{−1}\]
 </p>
@@ -499,7 +499,7 @@ usually done with the x-axis as real and the y-axis as imaginary. Here's
 </p>
 
 
-<div id="org3341e52" class="figure">
+<div id="orgd291663" class="figure">
 <p><img src="images/4.6.png" alt="4.6.png" />
 </p>
 </div>
@@ -511,7 +511,7 @@ and angle.
 </p>
 
 
-<div id="orga070ed8" class="figure">
+<div id="org492fe6d" class="figure">
 <p><img src="images/4.7.png" alt="4.7.png" />
 </p>
 </div>
@@ -533,9 +533,9 @@ boot up some other concepts we'll need.
 </div>
 </div>
 
-<div id="outline-container-org85d1687" class="outline-3">
-<h3 id="org85d1687">Euler's Number</h3>
-<div class="outline-text-3" id="text-org85d1687">
+<div id="outline-container-orgaf4f506" class="outline-3">
+<h3 id="orgaf4f506">Euler's Number</h3>
+<div class="outline-text-3" id="text-orgaf4f506">
 <p>
 Usually known as simply e, Euler's number is a mathematical constant.
 It's a real,
@@ -546,9 +546,9 @@ how we get to e through an analogy to compound interest.
 </p>
 </div>
 
-<div id="outline-container-org6dd3232" class="outline-4">
-<h4 id="org6dd3232">Growth</h4>
-<div class="outline-text-4" id="text-org6dd3232">
+<div id="outline-container-org3a31bfd" class="outline-4">
+<h4 id="org3a31bfd">Growth</h4>
+<div class="outline-text-4" id="text-org3a31bfd">
 <p>
 This section seems pretty unrelated at first, but it's actually key to
 understanding the DFT. I should add that this bank loan analogy is just
@@ -707,7 +707,7 @@ perimeter circle exactly one radian. We've rotated it by 1.
 </p>
 
 
-<div id="orga68b117" class="figure">
+<div id="orge92535e" class="figure">
 <p><img src="images/4.8.png" alt="4.8.png" />
 </p>
 </div>
@@ -720,9 +720,9 @@ The upshot is we can use e to make circles. This is the basis of the
 </div>
 </div>
 
-<div id="outline-container-orge6155cc" class="outline-3">
-<h3 id="orge6155cc">Complex sinusoid</h3>
-<div class="outline-text-3" id="text-orge6155cc">
+<div id="outline-container-org887ae43" class="outline-3">
+<h3 id="org887ae43">Complex sinusoid</h3>
+<div class="outline-text-3" id="text-org887ae43">
 <p>
 The complex sinusoid is really just the sum of two sinusoids, one real
 and one imaginary. These two sinusoids are in <i>phase quadrature</i>, which
@@ -786,7 +786,7 @@ green.
 </p>
 
 
-<div id="org6671db4" class="figure">
+<div id="orgb9aecdb" class="figure">
 <p><img src="images/4.9.gif" alt="4.9.gif" />
 </p>
 </div>
@@ -800,15 +800,15 @@ Using a complex sinusoid helps us keep it all compact and tidy.
 </div>
 </div>
 
-<div id="outline-container-org8df4c83" class="outline-3">
-<h3 id="org8df4c83">The Discrete Fourier Transform</h3>
-<div class="outline-text-3" id="text-org8df4c83">
+<div id="outline-container-orgd2ae018" class="outline-3">
+<h3 id="orgd2ae018">The Discrete Fourier Transform</h3>
+<div class="outline-text-3" id="text-orgd2ae018">
 <p>
 We've got all the bits we need! We're going to just dive in:
 </p>
 
 
-<div id="org5d8c360" class="figure">
+<div id="org4666407" class="figure">
 <p><img src="images/4.10.png" alt="4.10.png" />
 </p>
 </div>
@@ -880,7 +880,7 @@ could just as well write in ether of these forms:
 
 
 
-<div id="org58c67ed" class="figure">
+<div id="org1576b50" class="figure">
 <p><img src="images/4.11.png" alt="4.11.png" />
 </p>
 </div>
@@ -898,9 +898,9 @@ You may be asking yourself&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org93f6e69" class="outline-4">
-<h4 id="org93f6e69">Why are we multiplying our input signal by sinusoids?</h4>
-<div class="outline-text-4" id="text-org93f6e69">
+<div id="outline-container-org0ee63d3" class="outline-4">
+<h4 id="org0ee63d3">Why are we multiplying our input signal by sinusoids?</h4>
+<div class="outline-text-4" id="text-org0ee63d3">
 <p>
 The complex sinusoid is different for each bin. It's frequency is set by
 k. This complex sinusoid hunts for a sinusoid that matches it in our
@@ -916,7 +916,7 @@ Imagine we have a sinusoid A, which is at
 </p>
 
 
-<div id="orgeb2c0ff" class="figure">
+<div id="org0a30e8f" class="figure">
 <p><img src="images/4.sheet1.jpeg" alt="4.sheet1.jpeg" />
 </p>
 </div>
@@ -935,7 +935,7 @@ sinusoid of a different frequency, for example ½ Nyquist frequency:
 </p>
 
 
-<div id="orge18320b" class="figure">
+<div id="org604afeb" class="figure">
 <p><img src="images/4.sheet4.jpeg" alt="4.sheet4.jpeg" />
 </p>
 </div>
@@ -950,7 +950,7 @@ However, what if we multiply A by a sinusoid with the same frequency?
 </p>
 
 
-<div id="org168ee1b" class="figure">
+<div id="orgaba0c5e" class="figure">
 <p><img src="images/4.sheet3.jpeg" alt="4.sheet3.jpeg" />
 </p>
 </div>
@@ -972,9 +972,9 @@ through some examples:
 </div>
 </div>
 
-<div id="outline-container-org8d9c5fe" class="outline-4">
-<h4 id="org8d9c5fe">Examples</h4>
-<div class="outline-text-4" id="text-org8d9c5fe">
+<div id="outline-container-org4f0d4dc" class="outline-4">
+<h4 id="org4f0d4dc">Examples</h4>
+<div class="outline-text-4" id="text-org4f0d4dc">
 <p>
 We'll start with a signal to test. Here's a signal made from two
 sinusoids. We'll use the just the real part of the DFT to find out which
@@ -982,7 +982,7 @@ sinusoids.
 </p>
 
 
-<div id="org24b8f42" class="figure">
+<div id="orgf53687a" class="figure">
 <p><img src="images/4.12.png" alt="4.12.png" />
 </p>
 </div>
@@ -1043,13 +1043,13 @@ above.
 </p>
 
 
-<div id="org83c04fb" class="figure">
+<div id="orgb0997f4" class="figure">
 <p><img src="images/4.13.png" alt="4.13.png" />
 </p>
 </div>
 
 
-<div id="org984e266" class="figure">
+<div id="orgdaf648b" class="figure">
 <p><img src="images/4.sheet5.jpeg" alt="4.sheet5.jpeg" />
 </p>
 </div>
